--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/jpeg" href="Images/download.jpeg">
         <title>PRÁTICA EXTENSIONISTA</title>
 
-        <link rel="stylesheet" href="mainpage.css">
+        <link rel="stylesheet" href="index.css">
 
 
     </head>
