--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
         </main>
 
-        <script src="mainpage.js"></script>
+        <script src="index.js"></script>
     </body>
 
 </html>
